src/main/java/com/example/olc/common/error/dto/CommonErrorConst.java
package com.example.olc.common.error.dto;

public interface CommonErrorConst {
    String BAD_REQUEST_ERROR_MESSAGE = "Bad Request";
    String NOT_FOUND_ERROR_MESSAGE = "Not Found";
    String METHOD_NOT_ALLOWED_ERROR_MESSAGE = "Method Not Allowed";
    String NOT_IMPLEMENTED_ERROR_MESSAGE = "Not Implemented";
    String MALFORMED_URL_ERROR_MESSAGE = "Wrong URL string requested.";
    String MISSING_REQUEST_HEADER_ERROR_MESSAGE = "Missing Request Header";
    String UNKNOWN_ERROR_MESSAGE = "Unknown";
}
